--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/myprofile/{{userId}}">Mysite</a>
+                <a href="#mystores/{{userId}}">Mysite</a>
             </li>
             <li><a class="{{isActive[1]}}" href="#circles">Circles</a></li>
             <li ng-class="{ active: isActive('/explore')}">
@@ -46,7 +46,7 @@
 <div class="col-md-12" style="margin-top: 10px;">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
-        <li><a href="#profile/myprofile/{{userId}}">Mysite</a></li>
+        <li><a href="#mystores/{{userId}}">Mysite</a></li>
         <li class="active">Build Community</li>
     </ul>
 </div>
