--- a/public/app/partials/Community/group-details.html
+++ b/public/app/partials/Community/group-details.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/myprofile/{{userId}}" >Mysite</a>
+                <a href="#mystores/{{userId}}" >Mysite</a>
             </li>
             <li><a class="{{isActive[1]}}" href="#mygroups/{{currentUserId}}" >Groups</a>
             </li>
@@ -193,7 +193,7 @@
                     ng-repeat="member in friendList | limitTo:5 | filter:queryMembers | orderBy:'firstname':true">
                     <li class="list-group-item col-sm-12">
                         <div class="col-sm-9" style="padding-left: 0px; padding-right: 0px">
-                            <a href="#profile/{{member.friend_user_id}}"><img ng-src="{{service_url+'image/show/'+member.profile.profile_image.large_image_url}}"
+                            <a href="#mystores/{{member.friend_user_id}}"><img ng-src="{{service_url+'image/show/'+member.profile.profile_image.large_image_url}}"
                                                                   class="img-thumbnail" style="width: 32px; height: 32px"
                                                                   alt=""/> {{member.profile.firstname}}, {{member.profile.lastname}}</a>
                         </div>
@@ -219,7 +219,7 @@
                 <ul class="list-group" ng-repeat="member in selectedGroup.members | limitTo:5 | filter:queryGroupMembers">
                     <li class="list-group-item col-sm-12" ng-if="member.profile.user_id != loggedInUserId">
                         <div class="col-sm-9" style="padding-left: 0px; padding-right: 0px">
-                            <a href="#profile/{{member.profile.user_id}}"><img
+                            <a href="#mystores/{{member.profile.user_id}}"><img
                                     ng-src="{{service_url+'image/show/'+member.profile.profile_image.large_image_url}}"
                                     class="img-thumbnail" style="width: 32px; height: 32px" alt=""/>
                                 {{member.profile.firstname}}, {{member.profile.lastname}}</a>
@@ -235,7 +235,7 @@
                 <ul class="list-group" ng-if="selectedGroup.group_owner.user_id != loggedInUserId">
                     <li class="list-group-item col-sm-12" >
                         <div class="col-sm-9" style="padding-left: 0px; padding-right: 0px">
-                            <a href="#profile/{{selectedGroup.group_owner.user_id}}"><img
+                            <a href="#mystores/{{selectedGroup.group_owner.user_id}}"><img
                                     ng-src="{{service_url+'image/show/'+selectedGroup.group_owner.profile_image.large_image_url}}"
                                     class="img-thumbnail" style="width: 32px; height: 32px" alt=""/>
                                 {{selectedGroup.group_owner.firstname}}, {{selectedGroup.group_owner.lastname}}</a>
