--- a/public/app/partials/evezplace/create_store_step2.html
+++ b/public/app/partials/evezplace/create_store_step2.html
@@ -2,15 +2,10 @@
     <button type="button" class="close " data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     
-        <h1 style="color: #e51385">Step 2</h1>
+        <h1 style="color: #e51385">Create Store</h1>
 
-        <p>Select the type of store you prefer. Provide your contact details and billing information. Upload the signed copy of the contract. <a href="" style="text-decoration:none;">Click here</a> to know more about contract document</p>
+        <p>Create your store front in 6 easy steps. Provide the following basic information to get started. <b style="font-weight: 500">For more info about creating a store<a href="#whatdoiget" style="text-decoration:none;"> Click here</a></b></p>
 </div>
-
-<ul class="breadcrumb create-store-breadcrumb">
-    <li><a href="#mystores/{{userId}}">Mysite</a></li>
-    <li>Store Contract</li>
-</ul>
 
 <div ng-include src='"partials/evezplace/create_store_menu.html"' ng-controller="CreateStoreController"></div>
 
@@ -159,7 +154,7 @@
             <h4>Evezown contract agreement</h4>
             <p>Please download the Evezown contract. The signed physical contract has to be scanned and uploaded to evezown in doc format within 30 days from now.</p>
             
-            <a target="_self" href="http://evezown.com/docs/evezown_contract.doc" class="btn btn-primary btn-lg btn-block" download="foo.pdf">Download Agreement</a><br><br>
+            <a target="_self" href="http://evezown.com/docs/evezown_contract.doc" class="btn btn-primary btn-lg btn-block">Download Agreement</a><br><br>
         </div>
         
     </div>
