--- a/public/app/partials/evezplace/create_store_step3.html
+++ b/public/app/partials/evezplace/create_store_step3.html
@@ -4,15 +4,10 @@
     <button type="button" class="close " data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     
-        <h1 style="color: #e51385">Step 3</h1>
+        <h1 style="color: #e51385">Create Store</h1>
 
-        <p>Choose and upload pictures to create your store front. Upload your brand logo. Provide description of the store (not more than 50 words). Select how you want your store listed (for eg under products, Food & Nutrition and under Low cal foods</p>
+        <p>Create your store front in 6 easy steps. Provide the following basic information to get started. <b style="font-weight: 500">For more info about creating a store<a href="#whatdoiget" style="text-decoration:none;"> Click here</a></b></p>
 </div>
-
-<ul class="breadcrumb create-store-breadcrumb">
-    <li><a href="#mystores/{{userId}}">Mysite</a></li>
-    <li>Upload Collage Image</li>
-</ul>
 
 <div ng-include src='"partials/evezplace/create_store_menu.html"'></div>
 
