--- a/public/app/partials/evezplace/store_info_jumbotron.html
+++ b/public/app/partials/evezplace/store_info_jumbotron.html
@@ -16,7 +16,7 @@
                 <li>Education, Care & Parenting</li>
                 <li>Lifestyle</li>
             </ul>
-            <a href="#store/create/step1" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px">Get
+            <a href ng-click="Create_Store()" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px">Get
                 Started <span class="fa fa-chevron-right"></span></a>
         </div>
         <div class="col-md-4">
@@ -37,7 +37,7 @@
                 <li>Store + Business</li>
             </ul>
 
-            <a href="#store/create/step1" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px">Get
+            <a href ng-click="Create_Store()" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px">Get
                 Started <span class="fa fa-chevron-right"></span></a>
         </div>
         <div class="col-md-4">
