--- a/public/app/app.css
+++ b/public/app/app.css
@@ -158,7 +158,7 @@ input[type=number]::-webkit-outer-spin-button {
     font-family: 'Raleway', sans-serif;
     padding: 20px;
     margin-bottom: 0px;
-    min-height: 300px;
+    /*min-height: 240px;*/
 }
 
 .inner-jumbotron {
@@ -458,7 +458,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #bottom-nav {
-    margin-top: 20px;
+    margin-top: 16px;
+    margin-bottom: 10px;
 }
 
 #top-nav {
@@ -488,6 +489,14 @@ input[type=number]::-webkit-outer-spin-button {
 {
     float: left;
     margin: 0px 15px 0px 0px;
+}
+/*Popover content style*/
+.popover-content
+{
+    /*opacity:0.7;
+    color:#000000;
+    background-color: #FFF5BD;
+    border-radius: 4px;*/
 }
 
 /*product catalogue color picker*/
@@ -575,9 +584,22 @@ margin-top: 10px;
     background: #692668;
 }
 
+.btn-create-store {
+    background: #B573B5;
+    border-color: transparent;
+    border-radius: 0px;
+    font-weight: 100;
+    color:#FFFFFF;
+}
+
+.btn-create-store:hover {
+    background: #B573B5;
+    color:#FFFFFF;
+}
+
 #btn-login {
     color : #ffffff;
-    padding: 10px 20px 10px 20px;
+    padding: 6px 16px 6px 16px;
 }
 
 #btn-login:hover
@@ -646,7 +668,7 @@ margin-top: 10px;
 .nounderline {text-decoration: none}
 
 .request-invite {
-    margin-bottom: 80px;
+    margin-bottom: 10px;
 }
 
 .request-invite a {
