--- a/public/app/partials/evezplace/create_store_step5.html
+++ b/public/app/partials/evezplace/create_store_step5.html
@@ -2,15 +2,10 @@
     <button type="button" class="close " data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     
-        <h1 style="color: #e51385">Step 5</h1>
+      <h1 style="color: #e51385">Create Store</h1>
 
-        <p>Select how you would like to promote your store. it will appear in dynamic window on the store front</p>
+        <p>Create your store front in 6 easy steps. Provide the following basic information to get started. <b style="font-weight: 500">For more info about creating a store<a href="#whatdoiget" style="text-decoration:none;"> Click here</a></b></p>
 </div>
-
-<ul class="breadcrumb create-store-breadcrumb">
-    <li><a href="#mystores/{{userId}}">Mysite</a></li>
-    <li>Store Promotion</li>
-</ul>
 
 <div ng-include src='"partials/evezplace/create_store_menu.html"' ng-controller="CreateStoreController"></div>
 
