--- a/public/app/partials/evezplace/get_started.html
+++ b/public/app/partials/evezplace/get_started.html
@@ -4,6 +4,6 @@
         <h4 style="line-height: 1.5">It is easy to create a store on Evezown. Get Started now.</h4>
     </div>
     <div class="col-md-6 col-md-offset-3" style="margin-top: 40px">
-        <a href="#store/create/step1" class="btn btn-primary btn-block" style="padding: 20px 80px; font-size: 22px; border-radius: 10px;">Get Started <span class="fa fa-arrow-right"></span></a>
+        <a href ng-click="Create_Store()" class="btn btn-primary btn-block" style="padding: 20px 80px; font-size: 22px; border-radius: 10px;">Get Started <span class="fa fa-arrow-right"></span></a>
     </div>
 </div>
