--- a/public/app/partials/profile/myalbum-details.html
+++ b/public/app/partials/profile/myalbum-details.html
@@ -3,7 +3,7 @@
     <div id="navbar1">
         <ul class="nav navbar-nav">
             <li ng-class="">
-                <a href="#profile/myprofile/{{userId}}" >Mysite</a>
+                <a href="#mystores/{{userId}}" >Mysite</a>
             </li>
             <li ng-if="loggedInUserId == currentUserId">
                 <a href="#myalbums/{{userId}}" class="active">Gallery</a>
@@ -40,32 +40,6 @@
 </nav>
 <div class="col-md-12">
 <div class="row user-menu-container square">
-<div class="row cover-section" ng-controller="profileCtrl">
-    <div class="col-md-4 small-cover-pic">
-        <div class="small-cover-pic-top">
-            <div>
-                <img ng-src="{{leftCoverImage}}" src="http://placehold.it/393x220"
-                     class="img-responsive thumbnail"/>
-                <!--<img ng-src="http://www.turquoiseandgold.com/images/store_bng1.jpg" class="img-responsive" alt=""/>-->
-            </div>
-        </div>
-        <div class="small-cover-pic-bottom">
-            <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
-                 class="img-responsive thumbnail"/>
-            <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-            <!--class="img-responsive" alt=""/>-->
-        </div>
-    </div>
-    <div class="col-md-8 large-cover-pic custom-user-right-coverpic">
-        <img ng-src="{{rightCoverImage}}" src="http://placehold.it/803x452"
-             class="img-responsive thumbnail"/>
-        <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-        <!--class="img-responsive" alt=""/>-->
-        <!--<button class="btn btn-primary btn-sm btn-cover-pic-left"><span class="fa fa-camera"></span> Change Pic-->
-        <!--</button>-->
-
-    </div>
-</div>
 <div class="col-md-12 user-details" ng-controller="profileCtrl">
     <div class="row coralbg white custom-profile-userpic">
         <div class="col-md-3 top-margin">
@@ -131,17 +105,22 @@
             <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
         </div>
     </div>
-
-</div>
-<div class="col-md-2 user-menu-btns" 
-ng-include src='"partials/profile/profileLeftMenu.html"'>
-    
 </div>
 
-<ul class="breadcrumb" ng-controller="albums">
-    <li><a href="#profile/{{currentUserId}}">Home</a></li>
-    <li><a href="#myalbums/{{currentUserId}}">Gallery</a></li>
-</ul>
+ <!--breadcrumb-->
+<div class="col-md-12" style="margin-top: 10px;" id="view">
+    <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
+        <li><a href="#home">Home</a> <span class="divider"></span></li>
+        <li><a href="#myalbums/{{currentUserId}}">Gallery</a></li>
+    </ul>
+</div>
+<!--breadcrumb ends-->
+
+ <div class="col-md-2 user-menu-btns"
+    ng-include src='"partials/profile/PromotionalToolMenu.html"'>
+</div>
+
+
 <div class="col-md-10 eve-panel-body" style="padding: 5px">
         <div class="col-md-2" ng-if="selectedAlbum.owner_id ==loggedInUserId">
             <a class="btn btn-link" ng-click="EditAlbum();"><i class="fa fa-pencil"></i> edit album</a>
