--- a/public/app/partials/profile/mygroup.html
+++ b/public/app/partials/profile/mygroup.html
@@ -40,33 +40,6 @@
 
 <div class="col-md-12" ng-controller="profileCtrl">
     <div class="row user-menu-container square">
-        <div class="row cover-section custom-profile-covers">
-            <div class="col-md-4 small-cover-pic">
-                <div class="small-cover-pic-top">
-                    <div>
-                        <img ng-src="{{leftCoverImage}}" src="http://placehold.it/393x220"
-                             class="img-responsive thumbnail"/>
-                        <!--<img ng-src="http://www.turquoiseandgold.com/images/store_bng1.jpg" class="img-responsive" alt=""/>-->
-                    </div>
-                </div>
-                <div class="small-cover-pic-bottom">
-                    <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
-                         class="img-responsive thumbnail"/>
-                    <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                    <!--class="img-responsive" alt=""/>-->
-                </div>
-            </div>
-            <div class="col-md-8 large-cover-pic custom-user-right-coverpic">
-                <img ng-src="{{rightCoverImage}}" src="http://placehold.it/803x452"
-                     class="img-responsive thumbnail"/>
-                <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                <!--class="img-responsive" alt=""/>-->
-                <!--<button class="btn btn-primary btn-sm btn-cover-pic-left"><span class="fa fa-camera"></span> Change Pic-->
-                <!--</button>-->
-
-            </div>
-        </div>
-
         <div class="col-md-12 user-details">
             <div class="row coralbg white custom-profile-userpic">
                 <div class="col-md-3 top-margin">
@@ -132,11 +105,21 @@
                 <h3>About Me</h3>
                 <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
             </div>
-
         </div>
 
-        <div class="col-md-2 user-menu-btns" ng-include src='"partials/profile/profileLeftMenu.html"'>
-            
+        <!--breadcrumb-->
+        <div class="col-md-12" style="margin-top: 10px;" id="view">
+            <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
+                <li><a href="#home">Home</a> <span class="divider"></span></li>
+                <li><a href="#profile/myprofile/{{currentUserId}}">Profile</a></li>
+                <li><a href="#mystores/{{currentUserId}}">Promotional Tools</a></li>
+                <li class="active">Groups</li>
+            </ul>
+        </div>
+        <!--breadcrumb ends-->
+
+        <div class="col-md-2 user-menu-btns"
+            ng-include src='"partials/profile/PromotionalToolMenu.html"'>
         </div>
 
         <!--For Member-->
