--- a/public/app/partials/profile/profileSummary.html
+++ b/public/app/partials/profile/profileSummary.html
@@ -174,38 +174,7 @@
                             </h4>
                         </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-12">
-
-                                <div class="col-md-2 well text-center" id="user-profile" ng-controller="community">
-                                    <h3>{{friendList.length}}</h3>
-                                    <h4>Connects</h4>
-                                </div>
-
-                                <div class="col-md-2 well text-center" id="user-profile" ng-controller="circles">
-                                    <h3>{{myCircles.length}}</h3>
-                                    <h4>Circles</h4>
-                                </div>
-                                <div class="col-md-2 well text-center" id="user-profile" ng-controller="eventCtrl">
-                                    <h3>{{myEvents.length}}</h3>
-                                    <h4>Events</h4>
-                                </div>
-                                <div class="col-md-2 well text-center" id="user-profile" ng-controller="blogCntrl">
-                                    <h3>{{myBlogs.length}}</h3>
-                                    <h4>Blogs</h4>
-                                </div>
-                                <div class="col-md-2 well text-center" id="user-profile" ng-controller="albums">
-                                    <h3>{{myAlbums.length}}</h3>
-                                    <h4>Gallery</h4>
-                                </div>
-                                <div class="col-md-2 well text-center" id="user-more">
-                                    <h3><i class="fa fa-circle"></i>
-                                        <i class="fa fa-circle"></i>
-                                        <i class="fa fa-circle"></i>
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
                     </div>
                 </div>
                 <div class="col-md-12" id="view">
